--- a/bungeni_custom/trunk/themes/rw/css/reset.css
+++ b/bungeni_custom/trunk/themes/rw/css/reset.css
@@ -319,7 +319,7 @@ b, strong {
     text-decoration: blink;
     text-transform: uppercase;
     text-align: center;
-    text-shadow: 0px -1px 1px #222;
+    text-shadow: 0 0 0 #222;
     border: 1px solid #a00;
     border-bottom: 2px solid #d00;
     -webkit-border-bottom-left-radius: 5px;
@@ -373,6 +373,29 @@ b, strong {
     white-space: nowrap;
     z-index: 2;
 }
+.template-workspace.section-bungeni-business div#viewlet-above-content {
+	z-index:99 !important;
+	margin-top:35px;
+}
+.template-workspace #portal-search {
+    float: right;
+    padding: 2px 0.1em 0em 0;
+    text-align: right;
+    text-transform: none;
+    z-index:999999 !important;
+	clear:both;
+}
+.section-bungeni-workspace #portal-search {
+    float: right;
+    margin-top: 0px;
+	margin-right:10px;
+	margin-bottom:0px;
+    padding: 2px 0.1em 0em 0;
+    text-align: right;
+    text-transform: none;
+    z-index: 2;
+	clear:both;
+}
 
 /*
  * portal-siteactions
@@ -396,7 +419,7 @@ div.main-column h1 {
     font-weight: bold;
     line-height: 20px;
     color: #C8631B !important;
-    text-shadow: 0 0 1px #fff;
+    text-shadow: 0 0 0px #fff;
     display: block;
     margin: 5px auto;
     padding: 0;
@@ -417,7 +440,7 @@ div.main-column h1.title {
     position: relative;
     font-weight: bold;
     line-height: 20px;
-    text-shadow: 0 0 1px #fff;
+    text-shadow: 0 0 0px #fff;
     text-align: center;
 }
 .template-workspace.section-bungeni-admin div.main-column h1.title,
@@ -430,7 +453,7 @@ div.main-column h1.reportdoctype {
 }
 div.main-column h2 {
     display: block;
-    text-shadow: 0px 0px 1px #fff;
+    text-shadow: 0px 0px 0px #fff;
     line-height: 20px;
     font-size: 120%;
     padding: 0;
@@ -461,7 +484,7 @@ div.main-column h2 span {
 }
 div.main-column h3 {
     display: block;
-    text-shadow: 0px 0px 1px #fff;
+    text-shadow: 0px 0px 0px #fff;
     line-height: 20px;
     font-size: 100%;
     padding: 0;
@@ -477,7 +500,7 @@ div.main-column h3 {
 }
 .template-workspace div.main-column p {
     text-align: center;
-    text-shadow: 0px 0px 1px #fff;
+    text-shadow: 0px 0px 0px #fff;
 }
 
 
@@ -765,7 +788,7 @@ input.inputLabelActive {
 }
 #whats-on-overview p {
     color: #222;
-    text-shadow: 0px 0px 1px #fff;
+    text-shadow: 0px 0px 0px #fff;
     text-align:center;
     margin: .25em 0;
     line-height: 20px;
@@ -821,7 +844,7 @@ input.inputLabelActive {
     color: #555 !important;
     background: #fff;
     text-align: left;
-    text-shadow: 0px 1px 1px #fff;
+    text-shadow: 0px 0px 0px #fff;
     line-height: 20px;
     height: 20px;
 }
@@ -874,7 +897,7 @@ input.inputLabelActive {
 #portal-column-content #whats-on-overview .whats-on-viewlet dd.formPanel ul li {
     background: #eee;
     color: #222;
-    text-shadow: 0 1px 1px #fff;
+    text-shadow: 0 0 0 #fff;
     padding: 0;
 }
 #portal-column-content #whats-on-overview .whats-on-viewlet dd.formPanel ul ul {
@@ -919,7 +942,7 @@ input.inputLabelActive {
     line-height: 20px;
     height: 20px;
     text-align: justify;
-    text-shadow: 0px 1px 1px #fff;
+    text-shadow: 0px 0px 0px #fff;
     position: relative;
     margin: 0;
     padding: 0 .25em;
@@ -1119,6 +1142,7 @@ input.inputLabelActive {
 .template-workspace.section-bungeni-members .contentActions {
     border: 1px solid #569954 !important;
     background: #fff;
+	margin-left:10px;
     width: 100%;
     margin: 0 auto;
 }
@@ -1282,11 +1306,11 @@ div#portal-globalnav ul.level0 li {
     background: transparent;
 }
 div#portal-globalnav ul.level0 li a { 
-    text-shadow: 0px 1px 1px #fff;
+    text-shadow: 0px 0px 0px #fff;
     padding: 0 1em;
     margin: 0 .25em 0 0;
     color: #000;
-	font-weight:bold;
+	font-weight:normal;
     background: #eee;
     border: 1px solid #569954;
     border-bottom: 1px solid #eee;
@@ -1320,12 +1344,12 @@ div#portal-globalnav ul.level0 #secondary li a {
     border-style:solid;
     border-width:1px;
     color:#222222;
-	font-weight:bold;
+	font-weight:normal;
     font-family:tahoma,verdana,sans-serif;
     font-size:12px;
     margin:0 .25em 0 0;
     padding:0 1.25em;
-    text-shadow:0 1px 1px #FFFFFF;
+    text-shadow:0 0 0 #FFFFFF;
 }
 .template-portal div#portal-globalnav ul.level0 li#portaltab-business-whats-on ul a {
     -moz-border-radius-topleft:0px;
@@ -1345,7 +1369,7 @@ div#portal-globalnav ul.level0 #secondary li a {
 div#portal-globalnav ul.level0 li.selected a {
     position: relative;
     top:0px;
-    border-bottom: 2px solid #569954;
+    border-bottom: 0px solid #569954;
     background:#569954 url(../images/globalnav-level0-a.png) top left repeat-x;
 	color:#000 !important;
 }
@@ -1604,7 +1628,7 @@ div#portal-globalnav-bottom {
     -moz-border-radius: 2px;
     -webkit-border-radius: 2px;
     border-radius: 2px;
-    text-shadow: 0px 1px 1px #fff;
+    text-shadow: 0 0 0 #fff;
     border-bottom: 1px solid #aaa;
 }
 #portletArchiveDates .portletItem form .field {
@@ -1753,7 +1777,6 @@ table.listingdescription th,
     border-right: 1px solid #88f;
     border-top: 0 none;
     line-height: 20px !important;
-    text-shadow: 0px 1px 1px #fff;
     color: #444;
 }
 .yui-skin-sam .yui-dt-first th {
@@ -1795,7 +1818,6 @@ table.listingdescription td,
     border-right: 1px solid #aaf;
     padding: .25em .5em;
     color: #222;
-    text-shadow: 0 1px 1px #fff;
 }
 .template-portal table.listing th,
 .template-portal table.listingdescription th,
@@ -1951,9 +1973,6 @@ li.formTab a.selected {
 dd#items-to-be-scheduled-dl ul.formTabs li.formTab a:hover,
 dd#items-to-be-scheduled-dl ul.formTabs li.formTab a:active,
 dd#items-to-be-scheduled-dl ul.formTabs li.formTab a.selected,
-.template-workspace.section-bungeni-admin ul.formTabs li.formTab a:hover,
-.template-workspace.section-bungeni-admin ul.formTabs li.formTab a:active,
-.template-workspace.section-bungeni-admin ul.formTabs li.formTab a.selected,
 .template-workspace.section-bungeni-workspace ul.formTabs li.formTab a:hover,
 .template-workspace.section-bungeni-workspace ul.formTabs li.formTab a:active,
 .template-workspace.section-bungeni-workspace ul.formTabs li.formTab a.selected {
@@ -1984,6 +2003,25 @@ dd#items-to-be-scheduled-dl ul.formTabs li.formTab a.selected {
     margin: 0 .25em;
     line-height: 17px;
 }
+.template-workspace.section-bungeni-workspace ul.formTabs li.formTab a:hover,
+.template-workspace.section-bungeni-workspace ul.formTabs li.formTab a:active,
+.template-workspace.section-bungeni-workspace ul.formTabs li.formTab a.selected {
+    background: #21a1ba url(/static/images/w-globalnav-level0-a-first.png) top left repeat-x;
+    color: #000;
+	text-shadow:0 0 0 #fff;
+}
+
+.template-workspace.section-bungeni-workspace table.listing th,
+.template-workspace.section-bungeni-workspace table.listingdescription th,
+.template-workspace.section-bungeni-workspace .stx table th,
+.template-workspace.section-bungeni-workspace .yui-skin-sam .yui-dt-first th {
+    background:#21a1ba url(/static/images/w-globalnav-level1-bg-first.png) bottom left repeat-x !important;
+    text-shadow: 0 0 0  #fff;
+    color: #000;
+}
+.section-bungeni-workspace #region-content div#content h1:first-child {
+    color: #21a1ba !important;
+}
 
 /*
  * formPanel styles
@@ -2012,7 +2050,7 @@ body.template-workspace.section-bungeni-workspace #portal-column-content div#wha
 }
 .formPanel table.listing {
     font-size: 100%;
-    text-shadow: 0 0 1px #fff;
+    text-shadow: 0 0 0px #fff;
     color: #444;
 }
 .formPanel table.listing tr {
@@ -2050,11 +2088,67 @@ body.template-workspace.section-bungeni-workspace #portal-column-content div#wha
 .section-bungeni-admin .formPanel .field {
     width: 100%;
 }
-dl.portalMessage {
+.template-portal #portal-column-content div#region-content div#content div h2.title:first-child { 
+	margin-top:30px !important;
+}
+.template-workspace #portal-column-content div#region-content div#content div h2.title:first-child,
+.template-workspace #portal-column-content div#region-content div h2:first-child { 
+	margin-top:55px !important;
+}
+.template-portal #portal-column-content div#region-content div h2:first-child { 
+	margin-top:25px !important;
+}
+.template-portal dl.portalMessage {
+    margin: 0 auto;
+    padding: 0 .5em;
+    height: 18px;
+    line-height: 18px;
+    margin-bottom:20px;
+    border: 1px solid #800;
+    color: #333;
+	margin-top:-196px !important;
+	padding-right:10px !important;
+	position:absolute;
+    width: 97.3%;
+}
+.template-workspace #alchemist-form dl.portalMessage {
+	margin-top:-118px !important;
+}
+.template-portal #alchemist-form dl.portalMessage, 
+.template-portal #alchemist-form dl.portalMessage {
+	margin-top:-115px !important;
+}
+.template-portal #alchemist-form dl.portalMessage dt, 
+.template-workspace #alchemist-form dl.portalMessage dt, 
+.template-portal #alchemist-form dl.portalMessage dt {
+	height:15px !important;
+	line-height: 15px !important;
+	padding:0 1em .3em 1em !important;
+}
+.template-workspace dl.portalMessage {
+    margin: 0 auto;
+	margin-left:auto;
+	margin-right:auto;
+    padding: 0 .5em;
+    height: 18px;
+    line-height: 18px;
+    margin-bottom:5px;
+    border: 1px solid #800;
+    color: #333;
+	margin-top:-196px !important;
+	padding-right:10px !important;
+	position:absolute;
+    width: 94%;
+}
+.template-workspace.section-bungeni-admin dl.portalMessage {
+	margin-top:-160px !important;
+}
+.template-portal.section-bungeni-login .bungeniapp-form dl.portalMessage {
     margin: 0 auto;
     padding: 0 .5em;
     height: 25px;
     line-height: 25px;
+	font-size:0.7em;
     margin-bottom:5px;
     border: 1px solid #800;
     color: #333;
@@ -2081,9 +2175,11 @@ dl.portalMessage dd {
     margin: 0 auto;
     background: #d8d8d9 url(../images/globalnav-level1-bg.png) bottom left repeat-x;
 }
-.template-workspace.section-bungeni-admin .formPanel #display_form_spacer,
-.template-workspace.section-bungeni-workspace .formPanel #display_form_spacer {
+.template-workspace.section-bungeni-admin .formPanel #display_form_spacer {
     background: url(/static/images/w-globalnav-level1-bg.png) bottom left repeat-x;
+}
+.template-workspace.section-bungeni-workspace .formPanel #display_form_spacer {
+    background: url(/static/images/w-globalnav-level1-bg-first.png) bottom left repeat-x;
 }
 .template-workspace.section-bungeni-admin .formPanel #display_form_spacer {
     width: 100%;
@@ -2102,7 +2198,7 @@ dl.portalMessage dd {
     width: 19%;
     text-align: right;
     color: #111;
-    text-shadow: 0 1px 1px #fff;
+    text-shadow: 0 0 0 #fff;
     font-weight: bold;
     margin: 0;
     padding: .15em .5em;
@@ -2122,7 +2218,7 @@ dl.portalMessage dd {
     width: 79%;
     float: right;
     display: block;
-    text-shadow: 0 0 1px #fff;
+    text-shadow: 0 0 0 #fff;
     color: #333;
     padding: .15em;
     border: 0 none;
@@ -2347,6 +2443,13 @@ h4.tabberHeading {
 .section-bungeni-archive .documentContent {
     padding: 0 0 2em !important;
 }
+.template-portal .contentActions { /*toughie*/
+	margin-top:0px !important;
+	padding-top:-20px !important;
+}
+.template-workspace.section-bungeni-workspace .contentActions, .template-portal .contentActions { /*toughie*/
+	padding-top:-20px !important;
+}
 .template-portal .documentDescription {
     font-weight: normal;
 	width:480px;
@@ -2469,6 +2572,7 @@ div.navTreeCurrentNode, .portletNavigationTree div.navTreeCurrentNode.hover, .na
 	border:0 none;
 	background: transparent;
 }
+
 #col3_content {
 	width: 100% !important;
 }
@@ -2487,7 +2591,7 @@ div.navTreeCurrentNode, .portletNavigationTree div.navTreeCurrentNode.hover, .na
 div.main-column #collage h2 {
     display: block;
     text-align: justify;
-    text-shadow: 0px 0px 1px #fff;
+    text-shadow: 0px 0px 0px #fff;
     line-height: 20px;
     font-size: 120%;
     padding: 0;
