--- a/bungeni_custom/trunk/forms/ui.xml
+++ b/bungeni_custom/trunk/forms/ui.xml
@@ -310,12 +310,6 @@
         </field>
     </descriptor>
 
-    <descriptor name="Cosignatory">
-        <field name="user_id" displayable="view edit add listing" localizable="view edit listing">
-            <show modes="view edit listing" />
-        </field>
-    </descriptor>
-
     <descriptor name="Country">
         <field name="language" displayable="edit add" />
         <field name="country_id" displayable="view edit add" localizable="view edit">
@@ -939,6 +933,16 @@
         <field name="language" displayable="edit add" />
         <field name="notes" displayable="view edit add" localizable="view edit add">
             <show modes="view edit add" />
+        </field>
+    </descriptor>
+
+    <descriptor name="Signatory">
+        <field name="signatory_id" displayable="listing" />
+        <field name="user_id" displayable="view edit add listing" localizable="view edit listing">
+            <show modes="view edit listing" />
+        </field>
+        <field name="status" displayable="view listing" localizable="view listing">
+            <show modes="view listing" />
         </field>
     </descriptor>
 
