Updated themes for tz, ug, rw, bi, ea, et, ke, sd, and vanilla

--- a/bungeni_custom/trunk/themes/ug/css/reset.css
+++ b/bungeni_custom/trunk/themes/ug/css/reset.css
@@ -1903,7 +1903,7 @@ ul.formTabs {
     float: none;
 	margin-left: auto;
 	margin-right: auto;
-	width: 880px;
+	width: 870px !important;
 }
 
 dd#items-to-be-scheduled-dl ul.formTabs {
@@ -2165,6 +2165,31 @@ body.template-workspace.section-bungeni-workspace #portal-column-content div#wha
     color: #333;
     width: 94%;
 }
+.template-portal.section-bungeni-business dd.AgendaItem dl.portalMessage,
+.template-portal.section-bungeni-business dd.TabledDocument dl.portalMessage,
+.template-portal dd.Committee dl.portalMessage {
+	margin-top:-165px !important;
+    width: 98.5%;
+}
+.template-workspace.section-bungeni-business dd.TabledDocument dl.portalMessage,
+.template-workspace.section-bungeni-business dd.AgendaItem dl.portalMessage,
+.template-workspace.section-bungeni-workspace dd.TabledDocument dl.portalMessage {
+	margin-top:-172px !important;
+    width: 94%;
+}
+.template-workspace dd.Committee dl.portalMessage {
+	margin-top:-166px !important;
+    width: 94%;
+}
+.template-workspace dd.MemberOfParliament dl.portalMessage {
+	margin-top:-190px !important;
+    width: 98% !important;
+}
+.template-workspace.section-bungeni-workspace dd.Question dl.portalMessage,
+.template-workspace.section-bungeni-workspace dd.Motion dl.portalMessage {
+	margin-top:-237px !important;
+    width: 98%;
+}
 .template-portal dl.portalMessage {
 	margin: -14.5em 0 12em 0;
 }
@@ -2180,11 +2205,17 @@ dl.portalMessage dd {
 	font-size:1.2em;
 	text-shadow: 0.1em #f79f10;
 }
-#display_form_spacer {
+.template-portal #display_form_spacer {
     width: 95%;
     height:20px;
     margin: 0 auto;
     background: #d8d8d9 url(../images/globalnav-level1-bg.png) bottom left repeat-x;
+}
+.template-workspace #display_form_spacer {
+    width: 95%;
+    height:20px;
+    margin: 0 auto;
+    background: #f79f10 url(/static/images/globalnav-level1-bg.png) bottom left repeat-x;
 }
 .template-workspace.section-bungeni-admin .formPanel #display_form_spacer {
     background: url(/static/images/w-globalnav-level1-bg.png) bottom left repeat-x;
