--- a/bungeni_custom/trunk/themes/mu/css/skin.css
+++ b/bungeni_custom/trunk/themes/mu/css/skin.css
@@ -82,7 +82,7 @@
     text-align: left;
 }
 #portal-breadcrumbs a {
-    color:#b52e2e;
+    color:#cc6637;
     font-weight:bold;
 }
 #portal-breadcrumbs a:hover {
@@ -109,7 +109,7 @@ div.main-column h1 {
     font-size: 200%;
     font-weight: bold;
     line-height: 20px;
-    color: #b52e2e !important;
+    color: #86a26a !important;
     text-shadow: 0 0 1px #fff;
     text-align:center;
 }
@@ -120,16 +120,16 @@ div.main-column h1.title {
     line-height: 20px;
     text-shadow: 0 0 1px #fff;
     text-align: center;
-    color:#b52e2e !important;
+    color:#86a26a !important;
 }
 div.main-column h1.reportmaintitle,
 div.main-column h1.reportdoctype {
     font-size: 180%;
-    color:#b52e2e !important;
+    color:#86a26a !important;
 }
 div.main-column h2.reportdate {
     font-size: 180%;
-    color:#b52e2e !important;
+    color:#86a26a !important;
     font-weight: bold !important;
 }
 
@@ -143,13 +143,13 @@ div.main-column h1.reportheading {
     color:#000 !important;
 }
 .documentContent div h2:first-child {
-    font-size:1.4em;
+    font-size:1.1em;
     font-weight:normal !important;
-    color:#b52e2e !important;
+    color:#86a26a !important;
 }
 div.main-column h2.reporttitle {
     text-align:left;
-    color:#b52e2e !important;
+    color:#86a26a !important;
     font-size:1.1em;    
     font-weight:normal !important;
 }
@@ -157,7 +157,7 @@ div.main-column h2 {
     text-shadow: 0px 0px 1px #fff;
     font-size: 120%;
     font-weight: normal !important;
-    color: #b52e2e !important;
+    color: #86a26a !important;
     text-align: center;
 }
 div.main-column h2 span {
@@ -228,7 +228,7 @@ input.inputLabelActive {
 }
 #whats-on-overview h1 a {
     text-decoration: none;
-    color: #b52e2e !important;
+    color: #86a26a !important;
 }
 #whats-on-overview p {
     color: #222;
@@ -245,7 +245,7 @@ input.inputLabelActive {
 }
 #portal-column-content #whats-on-overview .whats-on-viewlet dd {
     border: 0 none;
-    border-top: 4px solid #5b543a;
+    border-top: 4px solid #c5dab2;
     border-bottom: 1px solid #86a26a;
 }
 #portal-column-content #whats-on-overview .whats-on-viewlet dd ul {
@@ -374,12 +374,8 @@ input.inputLabelActive {
 #portal-column-one .portlet .portletItem ul li ul li.navTreeCurrentNode ul {
     border-bottom: 1px solid #aaa;
 }
-.template-workspace #portal-column-one .portlet .portletItem a {
+.template-workspace #portal-column-one .portlet .portletItem  a {
     color:#000 !important;
-}
-.template-workspace #portal-column-one .portlet .portletItem a.navTreeCurrentItem,
-.template-workspace #portal-column-one .portlet .portletItem a:hover {
-    color:#fff !important;
 }
 #portal-column-one .portlet .portletItem ul li ul li.navTreeCurrentNode ul a {
     font-weight: normal;
@@ -390,12 +386,12 @@ input.inputLabelActive {
 }
 #portal-column-one .portlet .portletItem ul li ul li.navTreeCurrentNode ul a:hover,
 #portal-column-one .portlet .portletItem ul li ul li.navTreeCurrentNode ul a.navTreeCurrentItem {
-    background: #5b543a !important;
+    background: #c5dab2 !important;
     
 }
 #portal-column-one .portlet .portletItem ul li.navTreeCurrentNode ul a:hover,
 #portal-column-one .portlet .portletItem ul li.navTreeCurrentNode a.navTreeCurrentItem {
-    background: #5b543a !important;
+    background: #c5dab2 !important;
 }
 #portal-column-one .portlet .portletItem ul li ul li.navTreeCurrentNode ul ul {
     border: 0 none;
@@ -435,7 +431,7 @@ input.inputLabelActive {
     border: 1px solid #86a26a;
     border-bottom: 0 none;
     border-top: 0 none;
-    background:#5b543a;
+    background:#c5dab2;
 }
 .actionMenu .actionMenuContent ul li {
     border: 0 none;
@@ -446,7 +442,7 @@ input.inputLabelActive {
     color: #000;
 }
 .actionMenu .actionMenuContent ul li a:hover {
-    background-color: #eeeeee !important;
+    background: #cceaf3 !important;
     color: #000;
 }
 .actionmenu .actionMenuHeader ul#contentActionMenus li.context_translate a {
@@ -475,10 +471,16 @@ div#portal-globalnav ul.level0 li {
 }
 div#portal-globalnav ul.level0 li a { 
     text-shadow: 0 0 0 #fff;
-    color: #5d7622;
-    background: #cdde98;
-    border: 2px solid #9ab836;
+    color: #fff;
+    background: #86a26a;
+    border: 1px solid #aaa;
     border-bottom: 1px solid #86a26a;
+    -webkit-border-top-left-radius: 5px;
+    -webkit-border-top-right-radius: 5px;
+    -moz-border-radius-topleft: 5px;
+    -moz-border-radius-topright: 5px;
+    border-top-left-radius: 5px;
+    border-top-right-radius: 5px;
     font-family: tahoma,verdana,sans-serif;
     font-size: 12px;
 }
@@ -486,9 +488,11 @@ div#portal-globalnav ul.level0 li.selected a,
 div#portal-globalnav ul.level0 li a:hover {
     font-weight: normal;
     color: #fff;
-    border: 2px solid #9ab836;
-    border-bottom: 1px solid #5b543a;
-    background:#5b543a;
+    border-right: 1px solid #c5dab2;
+    border-left: 1px solid #c5dab2;
+    border-top: 1px solid #c5dab2;
+    border-bottom: 1px solid #c5dab2;
+    background:#c5dab2;
 }
 /*
  * Notes:
@@ -509,16 +513,15 @@ div#portal-globalnav ul.level0 li a:hover {
 }
 div#portal-globalnav ul.level0 ul.level1 {
     border-top: 0 none;
-    background: #5b543a;
+    background: #c5dab2;
 }
 div#portal-globalnav ul.level0 ul.level1 a {
     background: transparent;
     border: 0 none;
     text-shadow: none;
-    color:#fff !important;
 }
 div#portal-globalnav ul.level0 ul.level1 li a:hover {
-    color: #fff;
+    color: #000;
     text-decoration: underline;
     border: 0 none;
 }
@@ -529,7 +532,7 @@ div#portal-globalnav ul.level0 ul.level1 li.selected a {
     color: #d50005 !important;
 }
 .template-portal div#portal-globalnav ul.level0 ul.level1 li.selected a {
-	color:#c6ff00 !important;
+	color:#fff !important;
 }
 /*
  * Notes:
@@ -645,13 +648,13 @@ table.listing th,
 table.listingdescription th,
 .stx table th,
 .yui-skin-sam .yui-dt-first th {
-    background:#5b543a !important;
+    background:#d8d8d9 url(../images/w-globalnav-level1-bg.png) bottom left repeat-x !important;
     border: 0 none;
     border-left: 1px solid #bbf;
     border-right: 1px solid #88f;
     border-top: 0 none;
     text-shadow: 0 0 0 #fff;
-    color: #fff;
+    color: #444;
 }
 .yui-skin-sam .yui-dt-last th {
     background: #fff !important;
@@ -672,14 +675,14 @@ table.listing th a,
 table.listingdescription th a,
 .stx table th a,
 .yui-skin-sam .yui-dt-first th a {
-    color: #fff !important;
+    color: #222;
     border: 0 none;
 }
 table.listing td a,
 table.listingdescription td a,
 .stx table th a,
 .yui-skin-sam td a {
-    color: #b52e2e !important;
+    color: #cc6646;
     border: 0 none;
 }
 table.listing td,
@@ -706,10 +709,16 @@ li.formTab a,
 dd#items-to-be-scheduled-dl ul.formTabs li.formTab a {
     text-shadow: 0 0 0 #fff;
     text-decoration: none;
-    color: #5d7622 !important;
-    background: #cdde98;
-    border: 2px solid #9ab836;
-    border-bottom: 2px solid #cdde98;
+    color: #444;
+    background: #eee;
+    border: 1px solid #aaa;
+    border-bottom: 2px solid #eee;
+    -webkit-border-top-left-radius: 5px;
+    -webkit-border-top-right-radius: 5px;
+    -moz-border-radius-topleft: 5px;
+    -moz-border-radius-topright: 5px;
+    border-top-left-radius: 5px;
+    border-top-right-radius: 5px;
 }
 dd#items-to-be-scheduled-dl ul.formTabs li.formTab a {
     font-size: 95%;
@@ -717,14 +726,14 @@ dd#items-to-be-scheduled-dl ul.formTabs li.formTab a {
 li.formTab a:hover,
 li.formTab a:active,
 li.formTab a.selected {
-    color: #c6ff00 !important;
+    color: #222;
     border-top: 2px solid #86a26a;
     border-top-color: #86a26a;
-    border-right: 2px solid #9ab836;
-    border-left: 2px solid #9ab836;
-    border-bottom: 2px solid #5b543a;
+    border-right: 1px solid #999;
+    border-left: 1px solid #999;
+    border-bottom: 2px solid #c5dab2;
     text-decoration: none;
-    background:#5b543a;
+    background:#c5dab2 url(../images/globalnav-level0-a.png) top left repeat-x;
 }
 dd#items-to-be-scheduled-dl ul.formTabs li.formTab a:hover,
 dd#items-to-be-scheduled-dl ul.formTabs li.formTab a:active,
@@ -733,7 +742,7 @@ dd#items-to-be-scheduled-dl ul.formTabs li.formTab a.selected {
     text-decoration: none;
     background: #86a26a url(../images/w-globalnav-level0-a.png) top left repeat-x;
     border: 1px solid #aaa;
-    border-bottom-color: #5b543a;
+    border-bottom-color: #c5dab2;
     border-top-color: #999;
     color: #222;
 }
@@ -781,12 +790,11 @@ dl.portalMessage dd {
     text-shadow: 0.1em #f79f10;
 }
 #display_form_spacer {
-    background: #5b543a !important;
+    background: #c5dab2 url(../images/globalnav-level1-bg.png) bottom left repeat-x;
 }
 .template-portal dd#fieldset-written-question-response div.documentDescription {
-    background:#5b543a !important;
+    background:#c5dab2 !important;
     font-weight:normal;
-    color:#fff;
 }
 .formPanel .field .content-left-column,
 #version-history .diff h4 {
@@ -938,7 +946,7 @@ div.main-column #collage h2 {
     text-shadow:  0 0 0 #fff;
     font-size: 120%;
     font-weight: bold !important;
-    color: #b52e2e !important;
+    color: #86a26a !important;
 }
 #collage .three-columns-equal .block_1 ul {
     list-style-type:none; 
@@ -1017,39 +1025,35 @@ div.main-column #collage h2 {
 /*********************************************************************************************************/
 
 .template-portal {
-    background: #fff !important;
+    background: #c5dab2 !important;
 }
 
 .template-portal #header-wrapper {
-    background: #5a5239;
-    border-bottom: 15px solid #fff;
+    background: #86a26a;
+    border-bottom: 15px solid #c1c1c0;
 }
 
 .template-portal #header-in-left {
-    background: #fff;
+    background: #86a26a;
 }
 
 .template-portal #header-in-right {
-    background: #fff;
+    background: #86a26a;
 }
 
 .template-portal #top-layer div {
-    background-color:#5a5239;    
+    background-color:#434343;
 }
 
 .template-portal #visual-table-wrapper {
     background: url(/static/images/shadow_3.png) repeat-y top center;
-    border: 3px solid #808000;
-    border-top:0px;
+    border: 0 none;
 }
 .template-portal #portal-logo-wrapper {
     background:#fff url(/static/images/portal_img.png) no-repeat bottom right;
-    border: 3px solid #808000;
-    border-top:0px;
-    border-bottom:0px;
 }
 .template-portal #portal-logo {
-    background:#5a5239 url(../images/portal_banner.png) top left no-repeat;
+    background: url(../images/portal_banner.png) top left no-repeat;
 }
 /* 
  * if display is set to block it will display the logo used on the workspace
@@ -1059,7 +1063,6 @@ div.main-column #collage h2 {
 }
 .template-portal #top-layer div {
     border-bottom: 1px solid transparent;
-    border-right:3px solid #808000;
 }
 .template-portal #top-layer ul#portal-personaltools li a {
     color: #fff;
@@ -1126,8 +1129,8 @@ div.main-column #collage h2 {
     border-left: 0 none;
     border-top: 0 none;
     border-right: 1px solid #aaa;
-    border-bottom:1px solid #5b543a;
-    background:#5b543a !important;
+    border-bottom:1px solid #c5dab2;
+    background: url(../images/globalnav-level1-bg.png) bottom left repeat-x !important;
 }
 /*
  * formTabs
@@ -1261,16 +1264,14 @@ div.main-column #collage h2 {
 .template-portal .dhx_cal_container,
 .template-portal .dhx_scale_bar,
 .template-portal .dhx_scale_hour {
-    background: #5b543a;
-    border-color: #86a26a;
-    color: #ffffff;
+    background: #C5DAB2;
+    border-color: #C5DAB2;
 }
 div.dhx_cal_navline {
-    color:#ffffff !important;
+    color:#000 !important;
 }
 div.dhx_cal_navline div.active {
-    background:#d8efc4 !important;
-    color: #000000;
+    background:#86A26A !important;
 }
 .template-workspace.section-bungeni-archive .dhx_cal_header,
 .template-workspace.section-bungeni-archive .dhx_cal_data,
@@ -1404,24 +1405,22 @@ div.dhx_cal_navline div.active {
 .template-workspace div#portal-globalnav ul.level0 li.selected a {
     border-bottom-color: #d8d8d9;
     border-bottom-color: #222;
-    background:#d8d8d9;
+    background:#d8d8d9  url(../images/w-globalnav-level0-a.png) top left repeat-x;
 }
 .template-workspace div#portal-globalnav ul.level0 li.selected a,
 .template-workspace div#portal-globalnav ul.level0 li a:hover {
-    border-top: 2px solid #9ab836;
+    border-top: 2px solid #86a26a;
     border-bottom: 1px solid #d8d8d9;
-    background: #5b543a;
+    background: #d8d8d9 url(../images/w-globalnav-level0-a.png) top left repeat-x;
 }
 .template-workspace.section-bungeni-business div#portal-globalnav ul.level0 li#portaltab-business-whats-on a {
-    border-top: 2px solid #9ab836;
+    border-top: 2px solid #86a26a;
     border-bottom: 1px solid #d8d8d9;
-    background: #5b543a;
+    background: #c5dab2 url(../images/w-globalnav-level0-a.png) top left repeat-x;
 }
 .template-workspace div#portal-globalnav ul.level0 li#portaltab-:first-child a,
 .template-workspace div#portal-globalnav ul.level0 li#portaltab-:first-child a:hover {
 	border-top:2px solid #1763aa;
-	border-left:2px solid #1763aa;
-	border-right:2px solid #1763aa;
     background: url(/static/images/w-globalnav-level0-a-first.png) top left repeat-x !important;
 	color:#fff !important;
 	text-shadow:0 0 0 #fff;
@@ -1431,8 +1430,6 @@ div.dhx_cal_navline div.active {
 .section-bungeni-admin div#portal-globalnav ul.level0 li#portaltab-admin-content a,
 .section-bungeni-admin div#portal-globalnav ul.level0 li#portaltab-admin-content a:hover {
 	border-top:2px solid #666;
-	border-left:2px solid #666;
-	border-right:2px solid #666;	
     background: url(/static/images/w-globalnav-level0-a-last.png) top left repeat-x !important;
 	color:#fff !important;
 	text-shadow:0 0 0 #fff;
@@ -1449,7 +1446,7 @@ div.dhx_cal_navline div.active {
     border-right: 0 !important;
     border-top: 0 none !important;
     border-bottom:1px solid #d8d8d9;
-    background:#5b543a !important;
+    background:#c5dab2 !important;
     display: block;
 }
 .section-bungeni-workspace div#portal-globalnav ul.level0 ul.level1 {
@@ -1467,12 +1464,16 @@ div.dhx_cal_navline div.active {
     border-bottom:1px solid #1763aa;
     background:#888888 url(/static/images/w-globalnav-level1-bg-last.png) bottom left repeat-x !important;
     display: block;
+    color:#000;
+}
+.section-bungeni-admin div#portal-globalnav ul.level0 ul.level1 a {
+    color:#000 !important;
 }
 .template-workspace div#portal-globalnav ul.level0 ul.level1 li.selected a {
-    color: #9ab836 !important;
+    color: #000 !important;
 }
 .template-workspace.section-bungeni-admin div#portal-globalnav ul.level0 ul.level1 li.selected a {
-    color: #000 !important;
+    color: #fff !important;
 }
 .section-bungeni-workspace div#portal-globalnav ul.level0 ul.level1 li.selected a {
     color:#333 !important;
@@ -1502,8 +1503,8 @@ div.dhx_cal_navline div.active {
     border-left: 0 none;
     border-top: 0 none;
     border-right: 1px solid #aaa;
-    border-bottom:1px solid #5b543a;
-    background:#5b543a !important;
+    border-bottom:1px solid #c5dab2;
+    background: url(../images/globalnav-level1-bg.png) bottom left repeat-x !important;
 }
 /*
  * formTabs
@@ -1534,12 +1535,15 @@ div.dhx_cal_navline div.active {
     border-radius: 2px;
     -moz-border-radius: 2px;
 }
+.template-workspace.section-bungeni-admin ul.formTabs li.formTab a:hover,
+.template-workspace.section-bungeni-admin ul.formTabs li.formTab a:active,
+.template-workspace.section-bungeni-admin ul.formTabs li.formTab a.selected,
 .template-workspace.section-bungeni-workspace ul.formTabs li.formTab a:hover,
 .template-workspace.section-bungeni-workspace ul.formTabs li.formTab a:active,
 .template-workspace.section-bungeni-workspace ul.formTabs li.formTab a.selected {
     text-align: left;
     text-decoration: none;
-    background: #d8d8d9;
+    background: #d8d8d9 url(../images/w-globalnav-level0-a.png) top left repeat-x;
     border: 1px solid #aaa;
     border-bottom-color: #bbb;
     border-top-color: #999;
@@ -1561,16 +1565,15 @@ div.dhx_cal_navline div.active {
     text-shadow: 0 0 0  #fff;
     color: #000;
 }
-.template-workspace.section-bungeni-admin ul li.context_workflow dt a {
-    color:#000 !important;
-}
 .template-workspace.section-bungeni-admin ul.formTabs li.formTab a:hover,
 .template-workspace.section-bungeni-admin ul.formTabs li.formTab a:active,
 .template-workspace.section-bungeni-admin ul.formTabs li.formTab a.selected {
-    border: 2px solid #9ab836;
-    margin-left:3px;
-    margin-right:3px;
+    border: 1px solid #aaa;
     border-bottom: 0 none;
+    line-height: 17px;
+}
+.template-workspace.section-bungeni-admin ul li.context_workflow dt a {
+    color:#000 !important;
 }
 /*
  * formPanel styles
@@ -1580,7 +1583,7 @@ div.dhx_cal_navline div.active {
     color: #333;
 }
 .template-workspace dd#fieldset-written-question-response div.documentDescription {
-    background:#5b543a !important;
+    background:#c5dab2 !important;
 }
 .template-workspace div.documentContent p.documentDescription {
     margin-top:15px !important;
@@ -1624,9 +1627,6 @@ div.dhx_cal_navline div.active {
 .template-workspace table.listing td a:active {
     color:#436976 !important;
 } 
-.template-workspace.section-bungeni-workspace #display_form_spacer {
-background: #21a1ba !important;
-}
 /*
  * yui paginator
  */
