Improved colour combinations and retracted layout changes on previous update.

--- a/bungeni_custom/trunk/themes/ecowas/css/skin.css
+++ b/bungeni_custom/trunk/themes/ecowas/css/skin.css
@@ -453,6 +453,10 @@ input.inputLabelActive {
     background: none;
     color: #000;
 }
+.actionMenu .actionMenuContent ul li a#calendar-link-15 {
+    background: none;
+    color: #fff !important;
+}
 .actionMenu .actionMenuContent ul li a:hover {
     background-color: #f5f1f2 !important;
     color: #000;
@@ -710,6 +714,7 @@ table.listingdescription td,
     color: #222;
     text-shadow: 0 0 0 #fff;
 }
+
 /*
  * formTabs
  * Default styles.
