--- a/bungeni_custom/trunk/themes/gh/css/skin.css
+++ b/bungeni_custom/trunk/themes/gh/css/skin.css
@@ -552,7 +552,7 @@ div#portal-globalnav ul.level0 ul.level1 li.selected a {
     color: #d50005 !important;
 }
 .template-portal div#portal-globalnav ul.level0 ul.level1 li.selected a {
-	color:#9d0000 !important;
+	color:#fefa49 !important;
 }
 /*
  * Notes:
@@ -1171,6 +1171,13 @@ div.main-column #collage h2 {
     border-bottom:1px solid #d8d9da;
     background:#fff !important;
 }
+/*.template-portal.yui-skin-sam tr.yui-dt-first > th {
+    border-left: 0 none;
+    border-top: 0 none;
+    border-right: 1px solid #aaa;
+    border-bottom:1px solid #d8d9da;
+    background:#bbb !important;
+}*/
 /*
  * formTabs
  * Default styles.
@@ -1516,7 +1523,7 @@ div.dhx_cal_navline div.active {
     display: block;
 }
 .template-workspace div#portal-globalnav ul.level0 ul.level1 li.selected a {
-    color: #9d0000 !important;
+    color: #fffa4f !important;
 }
 .section-bungeni-workspace div#portal-globalnav ul.level0 ul.level1 li.selected a {
     color:#333 !important;
