--- a/bungeni_custom/trunk/themes/gm/css/skin.css
+++ b/bungeni_custom/trunk/themes/gm/css/skin.css
@@ -450,6 +450,14 @@ input.inputLabelActive {
     background: none;
     color: #000;
 }
+.actionMenu .actionMenuContent ul li a#calendar-link-15 {
+    background: none;
+    color: #fff !important;
+}
+.actionMenu .actionMenuContent ul li a#calendar-link-15:hover {
+    background: none;
+    color: #000 !important;
+}
 .actionMenu .actionMenuContent ul li a:hover {
     background-color: #f5f1f2 !important;
     color: #000;
