--- a/bungeni_custom/trunk/themes/gh/css/skin.css
+++ b/bungeni_custom/trunk/themes/gh/css/skin.css
@@ -325,7 +325,7 @@ div#region-content div#content  {
 /*
  * Portlets
  */
-.portlet, .portletHeader, .portletFooter { border: 0 none;z-index:99998 !important; } 
+.portlet, .portletHeader, .portletFooter { border: 0 none; } 
 .portletItem { border: 1px solid #d8d9da; border-top: 0 none; }
 #portal-column-one .portletHeader,
 #portal-column-content .portletHeader,
