--- a/bungeni_custom/trunk/themes/gm/css/reset.css
+++ b/bungeni_custom/trunk/themes/gm/css/reset.css
@@ -308,7 +308,10 @@ div#portal-globalnav-bottom {
  * content
  */
 div#region-content div#content > div:first-child {
-    margin-top:-10px;
+    margin-top:-5px;
+}
+.section-bungeni-archive div#region-content div#content > div:first-child  {
+   margin-top:15px;
 }
 /*
  * documentContent
