--- a/bungeni_custom/trunk/themes/gm/css/skin.css
+++ b/bungeni_custom/trunk/themes/gm/css/skin.css
@@ -319,7 +319,7 @@ input.inputLabelActive {
 /*
  * Portlets
  */
-.portlet, .portletHeader, .portletFooter { border: 0 none;z-index:99998 !important; } 
+.portlet, .portletHeader, .portletFooter { border: 0 none; } 
 .portletItem { border: 1px solid #255c1d; border-top: 0 none; }
 #portal-column-one .portletHeader,
 #portal-column-content .portletHeader,
