Schema updates. Item assignment update. See [ issue 708 ]
Adding new custom fields to parliamentary items and groups.
Updating field sizes - previous sizes too conservative.

Turning on assignment of all parliamentary items to groups.
 - Updated group selection + item selection vocabularies
 - Updated assignment menu items + UI listings
 - Updated workflows to allow item assignment.

Updated UI xml configuration.

--- a/bungeni_custom/trunk/forms/ui.xml
+++ b/bungeni_custom/trunk/forms/ui.xml
@@ -464,8 +464,8 @@
     </descriptor>
 
     <descriptor name="GroupGroupItemAssignment">
-        <field name="group_id" displayable="view edit add listing" localizable="view edit listing">
-            <show modes="view edit listing" />
+        <field name="group_id" displayable="view add listing" localizable="view listing">
+            <show modes="view listing" />
         </field>
         <field name="start_date" displayable="view edit add listing" localizable="view edit listing">
             <show modes="view edit listing" />
@@ -504,8 +504,8 @@
     </descriptor>
 
     <descriptor name="ItemGroupItemAssignment">
-        <field name="item_id" displayable="view edit add listing" localizable="view edit listing">
-            <show modes="view edit listing" />
+        <field name="item_id" displayable="view add listing" localizable="view listing">
+            <show modes="view listing" />
         </field>
         <field name="start_date" displayable="view edit add listing" localizable="view edit listing">
             <show modes="view edit listing" />
