Enable bungeni.Admin as a localizable role ; bungeni.Admin was not part of the roles which got localized listings - with this change - bungeni.Admin becomes one of the roles available for listing,view,edit,add customization

--- a/bungeni_custom/trunk/forms/ui.xml
+++ b/bungeni_custom/trunk/forms/ui.xml
@@ -1,4 +1,4 @@
-<ui roles="bungeni.Clerk bungeni.Speaker bungeni.Owner bungeni.MP bungeni.Signatory bungeni.Minister bungeni.Anonymous">
+<ui roles="bungeni.Admin bungeni.Clerk bungeni.Speaker bungeni.Owner bungeni.MP bungeni.Signatory bungeni.Minister bungeni.Anonymous">
 
     <descriptor name="AgendaItem">
         <field name="parliament_id" displayable="view listing" localizable="view listing">
