Slight modifications to the skins of the last commit. Missed images for The Comoros

--- a/bungeni_custom/trunk/themes/ci/css/skin.css
+++ b/bungeni_custom/trunk/themes/ci/css/skin.css
@@ -1436,6 +1436,12 @@ div.dhx_cal_navline div.active {
 .template-workspace div.contentActions dt.label-state-public a {
     color:#000 !important;
 }
+.template-workspace div.contentActions dd.actionMenuContent ul li > a span {
+    color:#fff !important;
+}
+.template-workspace div.contentActions dd.actionMenuContent ul li > a:hover span {
+    color:#000 !important;
+}
 /*
  * portal-globalnav
  */
@@ -1520,7 +1526,7 @@ div.dhx_cal_navline div.active {
     color: #c8f417 !important;
 }
 .section-bungeni-workspace div#portal-globalnav ul.level0 ul.level1 li.selected a {
-    color:#eed793 !important;
+    color:#3f3f3f !important;
 }
 /*
  * Table styles
