--- a/bungeni_custom/trunk/themes/td/css/skin.css
+++ b/bungeni_custom/trunk/themes/td/css/skin.css
@@ -1421,6 +1421,12 @@ div.dhx_cal_navline div.active {
 .template-workspace div.contentActions dt.label-state-public a {
     color:#000 !important;
 }
+.template-workspace div.contentActions dd.actionMenuContent ul li > a span {
+    color:#fff !important;
+}
+.template-workspace div.contentActions dd.actionMenuContent ul li > a:hover span {
+    color:#000 !important;
+}
 /*
  * portal-globalnav
  */
@@ -1501,7 +1507,7 @@ div.dhx_cal_navline div.active {
     color: #edd66d !important;
 }
 .section-bungeni-workspace div#portal-globalnav ul.level0 ul.level1 li.selected a {
-    color:#fffd6e !important;
+    color:#3f3f3f !important;
 }
 /*
  * Table styles
